--- a/sysutils/pstree/Makefile
+++ b/sysutils/pstree/Makefile
@@ -15,13 +15,13 @@ USES=	zip
 
 CONFLICTS=	psmisc
 
-PLIST_FILES=	bin/pstree man/man1/pstree.1.gz
+PLIST_FILES=	bin/pstree share/man/man1/pstree.1.gz
 
 do-build:
 	cd ${WRKSRC} && ${CC} ${CFLAGS} -o pstree pstree.c
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/pstree ${STAGEDIR}${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/pstree.1 ${STAGEDIR}${MAN1PREFIX}/man/man1/
+	${INSTALL_MAN} ${WRKSRC}/pstree.1 ${STAGEDIR}${PREFIX}/share/man/man1/
 
 .include <bsd.port.mk>
