--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -14,6 +14,7 @@ BUILD_DEPENDS=	${BUILD_DEPENDS_${ARCH}}
 BUILD_DEPENDS_powerpc64le=	as:devel/binutils
 LIB_DEPENDS=	libnspr4.so:devel/nspr \
 		libsqlite3.so:databases/sqlite3
+BUILD_DEPENDS+=	${LOCALBASE}/bin/sqlite3:databases/sqlite3
 TEST_DEPENDS=	bash:shells/bash
 
 USES=		cpe gmake perl5
