--- a/misc/mbuffer/Makefile
+++ b/misc/mbuffer/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	mbuffer
-PORTVERSION=	20240707
+PORTVERSION=	20241007
 CATEGORIES=	misc
 MASTER_SITES=	http://www.maier-komor.de/software/mbuffer/
 
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tool for buffering data streams
 WWW=		https://www.maier-komor.de/mbuffer.html
 
-LICENSE=	gpl3
+LICENSE=	gpl3+
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		localbase ssl tar:tgz autoreconf gmake
@@ -26,7 +26,6 @@ GCRYPT_RUN_DEPENDS=	libgcrypt>=1.8.4_1:security/libgcrypt
 MHASH_RUN_DEPENDS=	mhash>=0.9.9.9_5:security/mhash
 RHASH_RUN_DEPENDS=	rhash>=1.3.5:security/rhash
 
-WRKSRC=		${WRKDIR}/${PORTNAME}-r${PORTVERSION}
 # hangs forever
 NO_TEST=	yes
 
