--- a/lang/guile3/Makefile
+++ b/lang/guile3/Makefile
@@ -11,6 +11,9 @@ WWW=		https://www.gnu.org/software/guile/
 LICENSE=	gpl3 lgpl3
 LICENSE_COMB=	multi
 
+NOT_FOR_ARCHS?=	armv7 i386
+NOT_FOR_ARCHS_REASON=	Does not build on armv7 and i386
+
 USES=		tar:lz
 
 NO_TEST=	yes
