--- a/shells/scponly/Makefile
+++ b/shells/scponly/Makefile
@@ -1,118 +1,81 @@
 PORTNAME=	scponly
 PORTVERSION=	4.8.20110526
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	shells security
-MASTER_SITES=	SF
-MASTER_SITE_SUBDIR=	${PORTNAME}/${PORTNAME}-snapshots
+MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-snapshots
 DISTNAME=	${PORTNAME}-20110526
-EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tiny shell that only permits scp and sftp
+WWW=		https://github.com/scponly/scponly/wiki
 
 LICENSE=	bsd2
 
+USES=		cpe tar:tgz
+
 PORTDOCS=	BUILDING-JAILS.TXT INSTALL README SECURITY
-
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 
-OPTIONS=	SCPONLY_WILDCARDS "wildcards processing" on \
-		SCPONLY_GFTP "gftp compatibility" on \
-		SCPONLY_CHROOT "chroot functionality" off \
-		SCPONLY_RSYNC "rsync compatibility" off \
-		SCPONLY_SCP "vanilla scp compatibility" off \
-		SCPONLY_SVN "subversion compatibility" off \
-		SCPONLY_SVNSERVE "subversion compatibility svn+ssh://" off \
-		SCPONLY_UNISON "unison compatibility" off \
-		SCPONLY_WINSCP "WinSCP compatibility" off
+OPTIONS_DEFINE=	CHROOT DEFAULT_CHDIR DOCS GFTP RSYNC SCP SUBVERSION SVNSERVE \
+		UNISON WILDCARDS WINSCP
+OPTIONS_DEFAULT=	WILDCARDS
+DEFAULT_CHDIR_DESC=	Chdir(2) by default
+WILDCARDS_DESC=		Wildcards processing
+GFTP_DESC=	gftp support
+RSYNC_DESC=	rsync support
+CHROOT_DESC=	chroot(8) functionality
+SCP_DESC=	vanilla scp support
+SVNSERVE_DESC=	Subversion support for svn+ssh://
+UNISON_DESC=	Unisson support
+WINSCP_DESC=	WinSCP support
 
-.include <bsd.port.pre.mk>
+OPTIONS_SUB=	yes
 
-.if defined(SCPONLY_DEFAULT_CHDIR) && !empty(SCPONLY_DEFAULT_CHDIR)
-CONFIGURE_ARGS+=--with-default-chdir=${SCPONLY_DEFAULT_CHDIR}
+.if !exists(/usr/bin/sftp)
+BUILD_DEPENDS+=	openssh-portable>0:security/openssh-portable
+RUN_DEPENDS+=	openssh-portable>0:security/openssh-portable
 .endif
-
-.if defined(WITH_SCPONLY_WILDCARDS)
-CONFIGURE_ARGS+=--enable-wildcards
+DEFAULT_CHDIR_CONFIGURE_ON=	--with-default-chdir=${SCPONLY_DEFAULT_CHDIR}
+WILDCARDS_CONFIGURE_ENABLE=	wildcards
+GFTP_CONFIGURE_ENABLE=		gftp-compat
+CHROOT_CONFIGURE_ENABLE=	chrooted-binary
+CHROOT_USE=			RC_SUBR=scponlyc
+RSYNC_BUILD_DEPENDS=		rsync:net/rsync
+RSYNC_RUN_DEPENDS=		rsync:net/rsync
+RSYNC_CONFIGURE_ENABLE=		rsync-compat
+SCP_CONFIGURE_ENABLE=		scp-compat
+SUBVERSION_CONFIGURE_ENABLE=	svn-compat
+.if ${WITH_SUBVERSION_VER:U} == LTS
+SUBVERSION_BUILD_DEPENDS=	svn:devel/subversion-lts
+SUBVERSION_RUN_DEPENDS=		svn:devel/subversion-lts
+SVNSERVE_BUILD_DEPENDS=		svn:devel/subversion-lts
+SVNSERVE_RUN_DEPENDS=		svn:devel/subversion-lts
 .else
-CONFIGURE_ARGS+=--disable-wildcards
+SUBVERSION_BUILD_DEPENDS=	svn:devel/subversion
+SUBVERSION_RUN_DEPENDS=		svn:devel/subversion
+SVNSERVE_BUILD_DEPENDS=		svn:devel/subversion
+SVNSERVE_RUN_DEPENDS=		svn:devel/subversion
 .endif
-
-.if defined(WITH_SCPONLY_GFTP)
-CONFIGURE_ARGS+=--enable-gftp-compat
-.else
-CONFIGURE_ARGS+=--disable-gftp-compat
-.endif
-
-.if defined(WITH_SCPONLY_CHROOT)
-PLIST_SUB+=	SCPONLY_CHROOT=""
-CONFIGURE_ARGS+=--enable-chrooted-binary
-USE_RC_SUBR+=	scponlyc
-.else
-PLIST_SUB+=	SCPONLY_CHROOT="@comment "
-.endif
-
-.if defined(WITH_SCPONLY_RSYNC)
-BUILD_DEPENDS+=	rsync:${PORTSDIR}/net/rsync
-CONFIGURE_ARGS+=--enable-rsync-compat
-.else
-CONFIGURE_ARGS+=--disable-rsync-compat
-.endif
-
-.if defined(WITH_SCPONLY_SCP)
-CONFIGURE_ARGS+=--enable-scp-compat
-.else
-CONFIGURE_ARGS+=--disable-scp-compat
-.endif
-
-.if defined(WITH_SCPONLY_SVN)
-CONFIGURE_ARGS+=--enable-svn-compat
-.else
-CONFIGURE_ARGS+=--disable-svn-compat
-.endif
-
-.if defined(WITH_SCPONLY_SVNSERVE)
-CONFIGURE_ARGS+=--enable-svnserv-compat
-.else
-CONFIGURE_ARGS+=--disable-svnserv-compat
-.endif
-
-.if defined(WITH_SCPONLY_UNISON)
-BUILD_DEPENDS+=	unison:${PORTSDIR}/net/unison
-CONFIGURE_ARGS+=--enable-unison-compat
-.else
-CONFIGURE_ARGS+=--disable-unison-compat
-.endif
-
-.if defined(WITH_SCPONLY_WINSCP)
-CONFIGURE_ARGS+=--enable-winscp-compat
-.else
-CONFIGURE_ARGS+=--disable-winscp-compat
-.endif
-
-# svn, svnlook ... are per default in subversion
-# only check for one of them!
-.if defined(WITH_SCPONLY_SVN) || defined(WITH_SCPONLY_SVNSERVE)
-BUILD_DEPENDS+=	svn:${PORTSDIR}/devel/subversion
-.endif
-
-RUN_DEPENDS:=	${BUILD_DEPENDS}
+SVNSERVE_CONFIGURE_ENABLE=	svnserv-compat
+UNISON_BUILD_DEPENDS=		unison:net/unison
+UNISON_RUN_DEPENDS=		unison:net/unison
+UNISON_CONFIGURE_ENABLE=	unison-compat
+WINSCP_CONFIGURE_ENABLE=	winscp-compat
 
 post-patch:
 	@${ECHO_MSG} "In addition to knobs available from the OPTIONS dialog,"
 	@${ECHO_MSG} "you may set SCPONLY_DEFAULT_CHDIR to make users 'cd' to"
 	@${ECHO_MSG} "this directory after authentication."
+	@${REINPLACE_CMD} -e "s/-o 0 -g 0//g" ${WRKSRC}/Makefile.in
 
 post-install:
-	@${MKDIR} ${DOCSDIR}
+	@${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
+	${INSTALL_SCRIPT} ${WRKSRC}/setup_chroot.sh ${STAGEDIR}${EXAMPLESDIR}
+	${INSTALL_DATA} ${WRKSRC}/config.h ${STAGEDIR}${EXAMPLESDIR}
+	@${MKDIR} ${STAGEDIR}${DOCSDIR}
 .for i in ${PORTDOCS}
-	@${INSTALL_DATA} ${WRKSRC}/$i ${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/$i ${STAGEDIR}${DOCSDIR}
 .endfor
-	@${ECHO_MSG} ""
-	@${ECHO_MSG} "For information on several potential security concerns,"
-	@${ECHO_MSG} "please read:"
-	@${ECHO_MSG} "${DOCSDIR}/SECURITY"
-	@${ECHO_MSG} ""
 
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
