--- a/devel/py-botocore/Makefile
+++ b/devel/py-botocore/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	botocore
-PORTVERSION=	1.35.0
+PORTVERSION=	1.38.5
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -14,8 +14,9 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}jmespath>=0.7.1<2.0.0:devel/py-jmespath@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}python-dateutil>=2.1<3.0.0:devel/py-python-dateutil@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}urllib3>=1.25.4,1<1.27,1:net/py-urllib3@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}python-dateutil>=2.1<3.0.0:devel/py-python-dateutil@${PY_FLAVOR}
+TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}awscrt>=0.23.8:devel/py-awscrt@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}jsonschema>=0:devel/py-jsonschema@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517
@@ -26,6 +27,14 @@ NO_TEST=	yes
 OPTIONS_DEFINE=	CRT
 CRT_DESC=	Common runtime support
 
-CRT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}awscrt>=0.19.19:devel/py-awscrt@${PY_FLAVOR}
+CRT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}awscrt>=0.23.8:devel/py-awscrt@${PY_FLAVOR}
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+
+.if ${PYTHON_REL} < 31000
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}urllib3>=1.25.4,1<1.27,1:net/py-urllib3@${PY_FLAVOR}
+.else
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}urllib3>=1.25.4,1<3,1:net/py-urllib3@${PY_FLAVOR}
+.endif
+
+.include <bsd.port.post.mk>
