--- a/devel/Makefile
+++ b/devel/Makefile
@@ -27,6 +27,8 @@ SUBDIR += autoconf2.13
 SUBDIR += autogen
 SUBDIR += automake
 SUBDIR += autotools
+SUBDIR += aws-c-common
+SUBDIR += aws-c-compression
 SUBDIR += ayatana-ido
 SUBDIR += b2
 SUBDIR += basu
