add some aws stuff

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -29,6 +29,17 @@ SUBDIR += automake
 SUBDIR += autotools
 SUBDIR += aws-c-common
 SUBDIR += aws-c-compression
+SUBDIR += aws-c-event-stream
+SUBDIR += aws-c-http
+SUBDIR += aws-c-io
+SUBDIR += aws-c-mqtt
+SUBDIR += aws-c-s3
+SUBDIR += aws-c-sdkutils
+SUBDIR += aws-checksums
+SUBDIR += aws-crt-cpp
+SUBDIR += aws-crt-ffi
+SUBDIR += aws-sdk-cpp
+SUBDIR += aws-sdk-php
 SUBDIR += ayatana-ido
 SUBDIR += b2
 SUBDIR += basu
