--- a/security/Makefile
+++ b/security/Makefile
@@ -3,6 +3,11 @@ COMMENT = Security tools
 SUBDIR += aide
 SUBDIR += apg
 SUBDIR += autossh
+SUBDIR += aws-c-auth
+SUBDIR += aws-c-cal
+SUBDIR += aws-iam-authenticator
+SUBDIR += aws-lc
+SUBDIR += aws-vault
 SUBDIR += barnyard2
 SUBDIR += blocklist-de-all
 SUBDIR += botan2
