--- a/net/geoclue/Makefile
+++ b/net/geoclue/Makefile
@@ -11,7 +11,8 @@ LICENSE_COMB=	multi
 
 LIB_DEPENDS=	libjson-glib-1.0.so:devel/json-glib \
 		libinotify.so:devel/libinotify \
-		libsoup-3.0.so:devel/libsoup3
+		libsoup-3.0.so:devel/libsoup3 \
+		libnotify.so:devel/libnotify
 
 USES=		gettext gnome meson pkgconfig tar:bz2 vala:build
 
