--- a/www/analog/Makefile
+++ b/www/analog/Makefile
@@ -17,40 +17,40 @@ LIB_DEPENDS=	libgd.so:graphics/gd \
 		libpng.so:graphics/png
 
 USES=		jpeg
+BUILD_WRKSRC=	${WRKSRC}/src
+
+ALL_TARGET=	${PORTNAME}
+
+SUB_FILES=	pkg-message
 
 LIMGDIR?=	www/data/images
 IMGDIR=		${PREFIX}/${LIMGDIR}
-PLIST_SUB=	IMGDIR=${LIMGDIR}
+PLIST_SUB=	IMGDIR="${LIMGDIR}"
 
-ALL_TARGET=	analog
-SUB_FILES=	pkg-message
-PKGMESSAGE=	${WRKSRC}/pkg-message
-
-.include <bsd.port.pre.mk>
+OPTIONS_DEFINE=	DOCS EXAMPLES
 
 do-install:
-	${MKDIR} ${PREFIX}/share/analog/lang
+	${INSTALL_PROGRAM} ${WRKSRC}/analog ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/analog.man ${PREFIX}/share/man/man1/analog.1
+	${INSTALL_DATA} ${WRKSRC}/analog.cfg ${PREFIX}/etc/analog.cfg.sample
+	${MKDIR} ${DATADIR}/lang
+	${INSTALL_DATA} ${WRKSRC}/lang/* ${DATADIR}/lang
 	${MKDIR} ${IMGDIR}
 	${INSTALL_DATA} ${WRKSRC}/images/* ${IMGDIR}
-	${INSTALL_DATA} ${WRKSRC}/lang/* ${PREFIX}/share/analog/lang
-	${INSTALL_PROGRAM} ${WRKSRC}/analog ${PREFIX}/bin
-.if !exists(${PREFIX}/etc/analog.cfg)
-	${INSTALL_DATA} ${WRKSRC}/analog.cfg ${PREFIX}/etc
-.endif
-	${INSTALL_DATA} ${WRKSRC}/analog.cfg ${PREFIX}/etc/analog.cfg-dist
-.if !defined(NOPORTDOCS)
-	${MKDIR} ${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/docs/* ${DOCSDIR}
-	${MKDIR} ${EXAMPLESDIR}
-	${INSTALL_DATA} ${WRKSRC}/examples/*.cfg ${EXAMPLESDIR}
-	${INSTALL_DATA} ${WRKSRC}/anlgform.html ${EXAMPLESDIR}
-	${INSTALL_DATA} ${WRKSRC}/anlgform.pl ${EXAMPLESDIR}
-	${MKDIR} ${EXAMPLESDIR}/css
-	${INSTALL_DATA} ${WRKSRC}/examples/css/Readme.txt ${EXAMPLESDIR}/css
-	${INSTALL_DATA} ${WRKSRC}/examples/css/default.css ${EXAMPLESDIR}/css
-	${MKDIR} ${EXAMPLESDIR}/css/jreeves
-	${INSTALL_DATA} ${WRKSRC}/examples/css/jreeves/* ${EXAMPLESDIR}/css/jreeves
-.endif
-	${INSTALL_MAN} ${WRKSRC}/analog.man ${PREFIX}/man/man1/analog.1
 
-.include <bsd.port.post.mk>
+do-install-DOCS-on:
+	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/docs/* ${FAKE_DESTDIR}${DOCSDIR}
+
+do-install-EXAMPLES-on:
+	${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}
+	${INSTALL_DATA} ${WRKSRC}/examples/*.cfg ${FAKE_DESTDIR}${EXAMPLESDIR}
+	${INSTALL_DATA} ${WRKSRC}/anlgform.html ${FAKE_DESTDIR}${EXAMPLESDIR}
+	${INSTALL_DATA} ${WRKSRC}/anlgform.pl ${FAKE_DESTDIR}${EXAMPLESDIR}
+	${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}/css
+	${INSTALL_DATA} ${WRKSRC}/examples/css/Readme.txt ${FAKE_DESTDIR}${EXAMPLESDIR}/css
+	${INSTALL_DATA} ${WRKSRC}/examples/css/default.css ${FAKE_DESTDIR}${EXAMPLESDIR}/css
+	${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}/css/jreeves
+	${INSTALL_DATA} ${WRKSRC}/examples/css/jreeves/* ${FAKE_DESTDIR}${EXAMPLESDIR}/css/jreeves
+
+.include <bsd.port.mk>
