sysutils/debootstrap: man

--- a/sysutils/debootstrap/Makefile
+++ b/sysutils/debootstrap/Makefile
@@ -47,6 +47,6 @@ post-patch:
 
 post-install:
 	${INSTALL_MAN} ${WRKSRC}/debootstrap.8 \
-		${STAGEDIR}${MAN8PREFIX}/man/man8/debootstrap.8
+		${STAGEDIR}${PREFIX}/share/man/man8/debootstrap.8
 
 .include <bsd.port.mk>
