--- a/filesystems/scan_ffs/Makefile
+++ b/filesystems/scan_ffs/Makefile
@@ -11,10 +11,10 @@ LICENSE=	bsd2
 
 USES=		tar:bzip2
 
-PLIST_FILES=	sbin/scan_ffs man/man8/scan_ffs.8.gz
+PLIST_FILES=	sbin/scan_ffs share/man/man8/scan_ffs.8.gz
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/scan_ffs ${PREFIX}/sbin/.
-	${INSTALL_MAN} ${WRKSRC}/scan_ffs.8 ${MAN8PREFIX}/man/man8/.
+	${INSTALL_MAN} ${WRKSRC}/scan_ffs.8 ${PREFIX}/share/man/man8/.
 
 .include <bsd.port.mk>
