--- a/devel/subversion-lts/Makefile.common
+++ b/devel/subversion-lts/Makefile.common
@@ -16,6 +16,7 @@ CPE_VENDOR=	apache
 CONFLICTS_INSTALL+=	${PKGNAMEPREFIX}${PORTNAME}${PKGNAMESUFFIX}-1.[0-9].[0-9]* \
 			${PKGNAMEPREFIX}${PORTNAME}${PKGNAMESUFFIX}-1.1[0-9].[0-9]*
 
+BUILD_DEPENDS+=		${LOCALBASE}/bin/sqlite3:databases/sqlite3
 LIB_DEPENDS+=		libapr-1.so:devel/apr1 \
 			libsqlite3.so:databases/sqlite3 \
 			libexpat.so:textproc/expat2 \
