--- a/lang/spidermonkey91/Makefile
+++ b/lang/spidermonkey91/Makefile
@@ -7,12 +7,11 @@ DISTNAME=	firefox-${DISTVERSION}esr.source
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Standalone JavaScript based from Mozilla 91-esr
+WWW=		https://spidermonkey.dev/
 
 LICENSE=	mpl
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-# must use 90 or better
-LLVM_DEFAULT=	11
 BUILD_DEPENDS=	${LOCALBASE}/bin/clang${LLVM_DEFAULT}:devel/llvm${LLVM_DEFAULT} \
 		${LOCALBASE}/bin/python${PYTHON3_DEFAULT}:lang/python${PYTHON3_DEFAULT:S/.//g} \
 		${RUST_DEFAULT}>=1.35:lang/${RUST_DEFAULT} \
