--- a/security/py-python-gnupg/Makefile
+++ b/security/py-python-gnupg/Makefile
@@ -13,15 +13,11 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 BUILD_DEPENDS=	${PY_SETUPTOOLS} \
 		${PYTHON_PKGNAMEPREFIX}wheel>0:devel/py-wheel@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}coverage>=0.15.2:devel/py-coverage@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist pep517
 
 NO_ARCH=	yes
-
-do-test:
-		@(cd ${WRKSRC} && ${SETENV} ${PYTHON_CMD} test_gnupg.py --no-doctests)
-		@(cd ${WRKSRC} && ${SETENV} coverage-${PYTHON_VER} run test_gnupg.py --no-doctests)
+NO_TEST=	yes
 
 .include <bsd.port.mk>
