--- a/audio/libmysofa/Makefile
+++ b/audio/libmysofa/Makefile
@@ -10,7 +10,7 @@ COMMENT=	SOFA (Spatially Oriented Format for Acoustics) file reader
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-TEST_DEPENDS=	node:www/node
+NO_TEST=	yes
 
 USES=		cmake cpe
 USE_LDCONFIG=	yes
@@ -19,13 +19,6 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	hoene
 
 CPE_VENDOR=	symonics
-
-OPTIONS_DEFINE=		TEST
-OPTIONS_SUB=		yes
-
-TEST_BUILD_DEPENDS=	cunit>0:devel/cunit
-TEST_CMAKE_BOOL=	BUILD_TESTS
-TEST_TEST_TARGET=	test
 
 # The tests are expected to be in ../tests relative to the build
 # directory and the build results are expected to be in build/ relative
