games/tuxpaint: path

--- a/games/tuxpaint/Makefile
+++ b/games/tuxpaint/Makefile
@@ -31,9 +31,9 @@ USE_SDL=	gfx2 image2 mixer2 sdl2 ttf2
 MAKE_ARGS=	CPPFLAGS="-I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib" \
 		PREFIX="${PREFIX}" \
-		MAN_PREFIX="${STAGEDIR}${PREFIX}/share/man" \
-		DEVMAN_PREFIX="${STAGEDIR}${PREFIX}/share/man" \
-		X11_ICON_PREFIX="${STAGEDIR}${PREFIX}/share/pixmaps" \
+		MAN_PREFIX="${FAKE_DESTDIR}${TRUE_PREFIX}/share/man" \
+		DEVMAN_PREFIX="${FAKE_DESTDIR}${TRUE_PREFIX}/share/man" \
+		X11_ICON_PREFIX="${FAKE_DESTDIR}${TRUE_PREFIX}/share/pixmaps" \
 		GNOME_PREFIX="${PREFIX}" \
 		ARCH_INSTALL="" \
 		OPTFLAGS="${CFLAGS} -DHAVE_STRCASESTR" \
