textproc/py-elementpath: test circular

--- a/textproc/py-elementpath/Makefile
+++ b/textproc/py-elementpath/Makefile
@@ -12,11 +12,13 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}lxml>=0:devel/py-lxml@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}xmlschema>=2.0.0:textproc/py-xmlschema@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	distutils concurrent autoplist pytest
+USE_PYTHON=	distutils concurrent autoplist
 
 NO_ARCH=	yes
+NO_TEST=	yes
+
+# tests are a circular reference
 
 .include <bsd.port.mk>
