--- a/audio/libmysofa/Makefile
+++ b/audio/libmysofa/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	libmysofa
-DISTVERSION=	1.2.1-16
-DISTVERSIONSUFFIX=	-g52590e1
+DISTVERSION=	1.3.3
 DISTVERSIONPREFIX=	v
 CATEGORIES=	audio
 
@@ -11,6 +10,8 @@ WWW=		https://github.com/hoene/libmysofa
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	cunit>0:devel/cunit
+
 NO_TEST=	yes
 
 USES=		cmake cpe
@@ -20,6 +21,12 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	hoene
 
 CPE_VENDOR=	symonics
+
+OPTIONS_DEFINE=		STATIC
+OPTIONS_DEFAULT=	STATIC
+OPTIONS_SUB=		yes
+
+STATIC_CMAKE_BOOL=	BUILD_STATIC_LIBS
 
 # The tests are expected to be in ../tests relative to the build
 # directory and the build results are expected to be in build/ relative
