--- a/mail/pine-pgp-filters/files/patch-Makefile.in
+++ b/mail/pine-pgp-filters/files/patch-Makefile.in
@@ -1,28 +1,28 @@
---- Makefile.in.orig	2011-06-20 21:21:43 -0400
-+++ Makefile.in	2011-06-20 21:22:59 -0400
-@@ -9,18 +9,18 @@
+--- Makefile.in.orig	2010-04-12 00:37:45 UTC
++++ Makefile.in
+@@ -9,18 +9,18 @@ all:
  	done
  
  install: all
 -	@if [ ! -d @@PREFIX@@/libexec ]; then \
 -		install -d -m 755 @@PREFIX@@/libexec; \
-+	@if [ ! -d ${DESTDIR}@@PREFIX@@/libexec ]; then \
-+		install -d -m 755 ${DESTDIR}@@PREFIX@@/libexec; \
++	@if [ ! -d $(DESTDIR)@@PREFIX@@/libexec ]; then \
++		install -d -m 755 $(DESTDIR)@@PREFIX@@/libexec; \
  	fi
  
 -	install -m 555 $$PWD/out/ppf_* @@PREFIX@@/libexec
-+	install -m 555 $$PWD/out/ppf_* ${DESTDIR}@@PREFIX@@/libexec
++	install -m 555 $$PWD/out/ppf_* $(DESTDIR)@@PREFIX@@/libexec
  
 -	@if [ ! -d @@PREFIX@@/bin ]; then \
 -		install -d -m 755 @@PREFIX@@/bin; \
-+	@if [ ! -d ${DESTDIR}@@PREFIX@@/bin ]; then \
-+		install -d -m 755 ${DESTDIR}@@PREFIX@@/bin; \
++	@if [ ! -d $(DESTDIR)@@PREFIX@@/bin ]; then \
++		install -d -m 755 $(DESTDIR)@@PREFIX@@/bin; \
  	fi
  
 -	ln -sf @@PREFIX@@/libexec/ppf_mime @@PREFIX@@/bin/ppf_mime
 -	ln -sf @@PREFIX@@/libexec/ppf_mime_decrypt @@PREFIX@@/bin/ppf_mime_decrypt
-+	ln -sf ${DESTDIR}@@PREFIX@@/libexec/ppf_mime ${DESTDIR}@@PREFIX@@/bin/ppf_mime
-+	ln -sf ${DESTDIR}@@PREFIX@@/libexec/ppf_mime_decrypt ${DESTDIR}@@PREFIX@@/bin/ppf_mime_decrypt
++	ln -sf @@PREFIX@@/libexec/ppf_mime $(DESTDIR)@@PREFIX@@/bin/ppf_mime
++	ln -sf @@PREFIX@@/libexec/ppf_mime_decrypt $(DESTDIR)@@PREFIX@@/bin/ppf_mime_decrypt
  
  clean:
  	@if [ -d "$$PWD/out" ]; then \
