--- a/graphics/agg/Makefile
+++ b/graphics/agg/Makefile
@@ -1,28 +1,34 @@
 PORTNAME=	agg
-PORTVERSION=	2.5
-PORTREVISION=	2
+DISTVERSION=	2.7.0
+PORTREVISION=	0
 CATEGORIES=	graphics
-MASTER_SITES=	http://distfiles.alpinelinux.org/distfiles/ \
-		http://distfiles.lesslinux.org/ \
-		http://gentoo.netnitco.net/distfiles/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	High Quality Rendering Engine for C++
+WWW=		https://github.com/clausecker/agg
 
 LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/copying
 
 LIB_DEPENDS=	libfreetype.so:print/freetype2
 
-GNU_CONFIGURE=	yes
-USES=		autoreconf cpe gmake libtool pathfix pkgconfig sdl xorg
-USE_XORG=	x11
-USE_SDL=	sdl
-USE_LDCONFIG=	yes
-INSTALL_TARGET=	install-strip
+USES=		cpe localbase gmake libtool pkgconfig \
+		autoreconf pathfix xorg sdl
+CONFLICTS=      agg-2.*
 CPE_VENDOR=	antigrain
+USE_GITHUB=	yes
+GH_ACCOUNT=	clausecker
+GH_TAGNAME=	b064760 # 2024-09-28
+USE_CXXSTD=	c++14
+USE_LDCONFIG=	yes
+USE_SDL=	sdl
+USE_XORG=	x11
+
+GNU_CONFIGURE=	yes
+
+INSTALL_TARGET=	install-strip
 
 post-patch:
-	@${REINPLACE_CMD} 's/_LDFLAGS/_LDADD/' ${WRKSRC}/examples/Makefile.am
+	${REINPLACE_CMD} 's|_LDFLAGS|_LDADD|' ${WRKSRC}/examples/Makefile.am
 
 .include <bsd.port.mk>
