java/berkeley-db: test are janky

--- a/java/berkeley-db/Makefile
+++ b/java/berkeley-db/Makefile
@@ -18,7 +18,9 @@ BUILD_DEPENDS=	${JAVALIBDIR}/junit.jar:java/junit
 USES=		java:ant,run
 JAVA_VERSION=	8
 
-OPTIONS_DEFINE=	DOCS EXAMPLES TEST
+OPTIONS_DEFINE=	DOCS EXAMPLES
+
+NO_TEST=	yes
 
 MAKE_ENV+=	JAVALIBDIR="${JAVALIBDIR}"
 MAKE_ARGS+=	-cp ${JAVALIBDIR}/junit.jar
@@ -29,38 +31,7 @@ PLIST_FILES=	${JAVAJARDIR:S,^${PREFIX}/,,}/je-${PORTVERSION}.jar \
 PORTDOCS=	*
 PORTEXAMPLES=	*
 
-regression-test check test: build
-	#
-	# Running the vendor-provided self-tests. This may take a while
-	#
-	@if ! (cd ${BUILD_WRKSRC} ; ${MAKE_ENV} ${ANT} ${MAKE_ARGS} test) ; \
-	then	\
-		${ECHO_MSG} Please, review test failures and consider \
-			reporting them via \
-			http://forums.oracle.com/forums/forum.jspa?forumID=273 ; \
-		${FALSE} ; \
-	fi
-
 .include <bsd.mport.options.mk>
-
-.if ${PORT_OPTIONS:MTEST}
-post-build:	test
-	#
-	# Please, review the reported failures (if any) and consider
-	# reporting them to the developers via:
-	#	http://forums.oracle.com/forums/forum.jspa?forumID=273
-	# You can re-run the tests without rebuilding the port by
-	# simply doing `make test'
-	#
-.else
-post-build:
-	#
-	# Doing `make test' now might be useful (if time-consuming).
-	# Please, review the reported failures (if any) and consider
-	# reporting them via
-	#	http://forums.oracle.com/forums/forum.jspa?forumID=273
-	#
-.endif
 
 post-patch:
 	@${REINPLACE_CMD} "s,/usr/local,${PREFIX}," ${WRKSRC}/build.xml
