--- a/games/qstat/Makefile
+++ b/games/qstat/Makefile
@@ -1,32 +1,40 @@
-
-
 PORTNAME=	qstat
-PORTVERSION=	2.11
-PORTREVISION=	2
+PORTVERSION=	2.17
+DISTVERSIONPREFIX=	v
 CATEGORIES=	games net
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	A command line program to query game servers on the net
-LICENSE=	artistic
+COMMENT=	Command-line program to query game servers on the net
+WWW=		https://github.com/multiplay/qstat
 
+LICENSE=	artistic2
+
+CONFLICTS_INSTALL=	torque
+
+USES=		autoreconf gmake
 GNU_CONFIGURE=	yes
+USE_GITHUB=	yes
+GH_ACCOUNT=	multiplay
+
+PORTDOCS=	*
+
+OPTIONS_DEFINE=	DOCS
 
 post-extract:
-	@${MV} ${WRKSRC}/qstat.cfg ${WRKSRC}/qstat.cfg.default
+	@${MV} ${WRKSRC}/qstat.cfg ${WRKSRC}/qstat.cfg.sample
 
 post-patch:
-	@${REINPLACE_CMD} -e 's|\(qstat\.cfg\)|\1\.default|' \
-		${WRKSRC}/Makefile.in
-	@${REINPLACE_CMD} -e 's|OpenBSD|MidnightBSD|' ${WRKSRC}/qstat.c
+	@${REINPLACE_CMD} -e 's|qstat\.cfg|&.sample|' ${WRKSRC}/Makefile.am
+	@${REINPLACE_CMD} -e 's|__hpux|${OPSYS}|' ${WRKSRC}/qstat.c
+	@${PRINTF} '#!/bin/sh\n\necho -n ${PORTVERSION}' > \
+		${WRKSRC}/scripts/version.sh
 
-post-install:
-.if !defined(NOPORTDOCS)
-	@${MKDIR} ${DOCSDIR}/info ${DOCSDIR}/template
-	${INSTALL_DATA} ${WRKSRC}/qstatdoc.html ${DOCSDIR}
+do-install-DOCS-on:
+	@${MKDIR} ${STAGEDIR}${DOCSDIR}/info ${STAGEDIR}${DOCSDIR}/template
+	${INSTALL_DATA} ${WRKSRC}/CHANGES.txt ${WRKSRC}/qstatdoc.html \
+		${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/template/*.html ${WRKSRC}/template/*.txt \
-		${DOCSDIR}/template
-	${INSTALL_DATA} ${WRKSRC}/info/*.txt ${DOCSDIR}/info
-.endif
+		${STAGEDIR}${DOCSDIR}/template
+	${INSTALL_DATA} ${WRKSRC}/info/*.txt ${STAGEDIR}${DOCSDIR}/info
 
 .include <bsd.port.mk>
