--- a/multimedia/mplayer/Makefile
+++ b/multimedia/mplayer/Makefile
@@ -14,18 +14,16 @@ OPTIONS_DEFINE=	AALIB AMR_NB AMR_WB ASS BLURAY CACA CDIO DV DVDNAV \
 		JPEG LADSPA LIBMNG LIRC LZO NAS NLS OPENAL OPENGL \
 		OPENJPEG OPUS PULSEAUDIO \
 		SDL SKINS SNDIO SMB SPEEX SVGALIB V4L VDPAU VPX \
-		X11 X11DGA X11VM XINERAMA XVIDEO XVMC
+		X11 X11DGA X11VM XINERAMA XVIDEO
 
 OPTIONS_DEFAULT=ASS DVDNAV FONTCONFIG FRIBIDI GNUTLS OPENGL \
 		SKINS X11 X11DGA X11VM XINERAMA XVIDEO
 
 OPTIONS_DEFINE_i386=	RTCPU
 OPTIONS_DEFINE_amd64=	RTCPU
-OPTIONS_DEFINE_powerpc=	RTCPU
 
 OPTIONS_DEFAULT_i386=	RTCPU VDPAU
 OPTIONS_DEFAULT_amd64=	RTCPU VDPAU
-OPTIONS_DEFAULT_powerpc=RTCPU
 
 ASS_DESC?=	Subtitles rendering via libass
 BLURAY_DESC?=	BluRay support
