--- a/misc/compat7x/Makefile
+++ b/misc/compat7x/Makefile
@@ -7,9 +7,9 @@ DISTNAME=	${PORTNAME}-${ARCH}-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Convenience package to install the FreeBSD compat7x libraries
-LICENSE=	agg
 
-LICENSE=	bsd2
+LICENSE=	bsd2 bsd3 bsd4
+LICENSE_COMB=	multi
 
 USES=		tar:xz
 NO_BUILD=	yes
