--- a/misc/compat8x/Makefile
+++ b/misc/compat8x/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	compat8x
 PORTVERSION=	8.4.804000.20151116
 PORTREVISION=	0
@@ -15,6 +13,7 @@ LICENSE=	bsd2
 
 USES=		tar:xz
 NO_BUILD=	yes
+ONLY_FOR_ARCHS=	i386 amd64
 PLIST=		${PKGDIR}/pkg-plist.${ARCH}
 TARGET_DIR=	${PREFIX}/lib/compat
 TARGET32_DIR=	${PREFIX}/lib32/compat
